--- a/Changes
+++ b/Changes
@@ -8,6 +8,9 @@ Legend:
   E: Enhanced
   N: New
 
+* 1.03
+  - Rebuild version for new cpan pause upload.
+
 * 1.02
   - Removed the last UnixDomainSocket reference, hopefully.
 
