--- a/Changes
+++ b/Changes
@@ -8,6 +8,9 @@ Legend:
   E: Enhanced
   N: New
 
+* 1.04
+  - Fixed number of tests to run.
+
 * 1.03
   - Rebuild version for new cpan pause upload.
 
